// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/RoutePublic should redirect to /private for authenticated access 1`] = `
<div>
  REDIRECT
</div>
`;

exports[`modules/RoutePublic should render the Login component for unauthenticated access 1`] = `
<div>
  LOGIN
</div>
`;
